# orquestracao-eng-de-dados

./: .env  .env.example  .gitignore  ORQUESTRACAO.md  README.md  main.py  pyproject.toml  requirements.txt  rodar.ps1  setup_venv.ps1
src/: __init__.py  config.py  database.py  ingestion.py  main.py  orchestration.py  processing.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  extractor.py  loader.py  transformer.py
src/models/: __init__.py  contract.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: conftest.py  test_extractor.py  test_loader.py  test_transformer.py
