[project]
name = "orion"
version = "0.1.0"
description = "Pipeline ETL para dados do PNCP"
authors = [
    { name = "Orion Team", email = "dev@orion.local" }
]
dependencies = [
    "requests~=2.31.0",
    "pymongo~=4.6.1",
    "python-dotenv~=1.0.1",
    "loguru~=0.7.2",
    "pydantic~=2.6.1",
    "pydantic-settings~=2.2.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

[tool.black]
line-length = 120
target-version = ['py311']

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
