[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion"
version = "0.1.0"
description = "Pipeline ETL para dados do PNCP com persistência no MongoDB Atlas."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Orion Team" }]
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "pymongo>=4.6.1,<5.0.0",
    "dnspython>=2.6.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "loguru>=0.7.2,<1.0.0",
    "pydantic>=2.6.1,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0,<26.0.0",
    "pytest>=8.0.0,<9.0.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
