[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-eng-de-dados"
version = "0.1.0"
description = "Pipeline ETL para dados do PNCP com persistência no MongoDB Atlas."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Grupo Orion" }
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"